Updated page functionality and added content to portfolio modules

--- a/css/about.css
+++ b/css/about.css
@@ -30,8 +30,14 @@
     font-size: 1.1rem;
 }
 
+.about-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .about-image img {
-    width: 83%;
+    width: 85%;
     border-radius: 8px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
