--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body {
     line-height: 1.6;
 }
 
-/* Grid Background */
+/* Grid Background - Static diagonal version */
 .grid-background {
     position: fixed;
     top: 0;
@@ -30,9 +30,8 @@ body {
     width: 100%;
     height: 100%;
     background-image: 
-        linear-gradient(rgba(0, 0, 0, 0.05) 1px, transparent 1px),
-        linear-gradient(90deg, rgba(0, 0, 0, 0.05) 1px, transparent 1px);
-    background-size: 40px 40px;
+        repeating-linear-gradient(-7deg, rgba(0, 0, 0, 0.05) 0px, rgba(0, 0, 0, 0.05) 1px, transparent 1px, transparent 40px),
+        repeating-linear-gradient(83deg, rgba(0, 0, 0, 0.05) 0px, rgba(0, 0, 0, 0.05) 1px, transparent 1px, transparent 40px);
     z-index: -2;
 }
 
@@ -44,13 +43,13 @@ body {
     width: 100%;
     height: 100%;
     background-image: url('../images/texture.png');
-    opacity: 0.2;
+    opacity: 0.1;
     z-index: -1;
 }
 
 /* Header */
 header {
-    background: linear-gradient(to right, #ED3D6D, #BB113E);
+    background: var(--primary-color);
     padding: 1.5rem 2rem;
     position: fixed;
     width: 100%;
